Temporary fixes for networking stuff